--- a/ITManager/ITManager/Views/ShellView.xaml
+++ b/ITManager/ITManager/Views/ShellView.xaml
@@ -1,12 +1,27 @@
-﻿<Window x:Class="ITManager.ShellView"
+﻿<Controls:MetroWindow  x:Class="ITManager.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ITManager"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:prism="http://prismlibrary.com/"
+        WindowTitleBrush="{StaticResource DefaultAppColor}"
+        prism:ViewModelLocator.AutoWireViewModel="True"
+        xmlns:c="clr-namespace:ITManager.Helpers"
+        WindowStartupLocation="CenterScreen"
+        WindowState="{Binding WindowState}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="ITManager" Height="450" Width="700">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" MaxWidth="150"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <ContentControl Grid.Column="0"
+                        HorizontalAlignment="Left"
+                        prism:RegionManager.RegionName="{x:Static c:Constants.MenuRegion}"/>
+        <ContentControl Grid.Column="1" 
+                        prism:RegionManager.RegionName="{x:Static c:Constants.MainRegion}"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
