--- a/ITManager/ITManager/Styles/LightStyles.xaml
+++ b/ITManager/ITManager/Styles/LightStyles.xaml
@@ -34,4 +34,13 @@
         <Setter Property="BorderThickness" Value="0"/>
     </Style>
 
+    <Style x:Key="MenuButtonStyle" TargetType="Button">
+        <Setter Property="FontSize" Value="18"></Setter>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Background" Value="{StaticResource DefaultAppColor}"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="AliceBlue"/>
+    </Style>
+
 </ResourceDictionary>
