--- a/ITManager/ITManager/Views/ShellView.xaml
+++ b/ITManager/ITManager/Views/ShellView.xaml
@@ -14,11 +14,12 @@
         Title="ITManager" Height="600" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.5*" MaxWidth="250"/>
+            <ColumnDefinition Width="Auto" MaxWidth="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <ContentControl Grid.Column="0"
+                        Visibility="{Binding MenuVisibility, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                         prism:RegionManager.RegionName="{x:Static c:Constants.MenuRegion}"/>
         <ContentControl Grid.Column="1" 
                         prism:RegionManager.RegionName="{x:Static c:Constants.MainRegion}"/>
