--- a/ITManager/ITManager/Styles/LightStyles.xaml
+++ b/ITManager/ITManager/Styles/LightStyles.xaml
@@ -24,8 +24,6 @@
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
     </Style>
 
-
-
     <Style x:Key="DefaultButtonStyle" TargetType="Button">
         <Setter Property="Height" Value="30"/>
         <Setter Property="Background" Value="{StaticResource DefaultAppColor}"/>
@@ -41,6 +39,13 @@
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="AliceBlue"/>
+    </Style>
+
+
+    <Style x:Key="PageTitleStyle" TargetType="Label">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Foreground" Value="{StaticResource DefaultAppColor}"/>
+        <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
 </ResourceDictionary>
