--- a/ITManager/ITManager/Views/ChangePasswordView.xaml
+++ b/ITManager/ITManager/Views/ChangePasswordView.xaml
@@ -1,9 +1,12 @@
-﻿<UserControl x:Class="ITManager.Views.RightsManagementView"
+﻿<UserControl x:Class="ITManager.Views.ChangePasswordView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ITManager.Views"
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:Behaviors="clr-namespace:ITManager.Behaviors"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
