--- a/ITManager/ITManager/Views/ChangePasswordView.xaml
+++ b/ITManager/ITManager/Views/ChangePasswordView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:Behaviors="clr-namespace:ITManager.Behaviors"
@@ -10,6 +11,48 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Button Width="60" 
+                Height="40"
+                Content="←"
+                Style="{StaticResource DefaultButtonStyle}"
+                Margin="10"
+                FontSize="25"
+                FontWeight="Bold"
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top"
+                VerticalContentAlignment="Top"
+                Command="{Binding GoToLoginView}"/>
+        <StackPanel Grid.Column="1" VerticalAlignment="Center">
+            <Label  Content="Change password" 
+                    Style="{StaticResource DefaultLabelStyle}" 
+                    HorizontalAlignment="Center"/>
+            <TextBlock Text="To enter you have to change default password."
+                       Margin="0 5 0 0"
+                       TextWrapping="Wrap"/>
+            <PasswordBox Controls:TextBoxHelper.Watermark="New password"
+                         Margin="0 20 0 0"
+                         VerticalContentAlignment="Center"
+                         Controls:TextBoxHelper.ClearTextButton="True">
+                <i:Interaction.Behaviors>
+                    <Behaviors:PasswordBehavior Password="{Binding NewPassword, Mode=TwoWay}" />
+                </i:Interaction.Behaviors>
+            </PasswordBox>
+            <PasswordBox Controls:TextBoxHelper.Watermark="Confirm new password"
+                         Margin="0 20 0 0"
+                         VerticalContentAlignment="Center"
+                         Controls:TextBoxHelper.ClearTextButton="True">
+                <i:Interaction.Behaviors>
+                    <Behaviors:PasswordBehavior Password="{Binding ConfirmNewPassword, Mode=TwoWay}" />
+                </i:Interaction.Behaviors>
+            </PasswordBox>
+            <Button Content="Change" 
+                    Command="{Binding ChangePassword}"
+                    Style="{StaticResource DefaultButtonStyle}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
