--- a/ITManager/ITManager/Styles/LightStyles.xaml
+++ b/ITManager/ITManager/Styles/LightStyles.xaml
@@ -25,20 +25,40 @@
     </Style>
 
     <Style x:Key="DefaultButtonStyle" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}" 
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Height" Value="30"/>
-        <Setter Property="Background" Value="{StaticResource DefaultAppColor}"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="Margin" Value="0 20 0 0"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Style.Triggers>
+            <Trigger Property="IsPressed" Value="False">
+                <Setter Property="Background" Value="#FF1988D3"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#CC5A96FA"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="#FF5A96FA"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
-    <Style x:Key="MenuButtonStyle" TargetType="Button">
-        <Setter Property="FontSize" Value="18"></Setter>
+    <Style x:Key="MenuButtonStyle" TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="FontSize" Value="18"/>
         <Setter Property="Height" Value="40"/>
-        <Setter Property="Background" Value="{StaticResource DefaultAppColor}"/>
-        <Setter Property="Foreground" Value="White"/>
         <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="BorderBrush" Value="AliceBlue"/>
+        <Setter Property="BorderBrush" Value="#FF3EA6E2"/>
     </Style>
 
 
@@ -48,4 +68,18 @@
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
+    <Style x:Key="SectionTitleStyle" TargetType="Label">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="0 20 0 0" />
+        <Setter Property="FontWeight" Value="SemiBold"/>
+    </Style>
+
+    <Style x:Key="EditToggleButtonStyle" TargetType="ToggleButton">
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Width"  Value="35" />
+        <Setter Property="Height" Value="35" />
+        <Setter Property="BorderThickness" Value="0"/>
+    </Style>
 </ResourceDictionary>
