--- a/ITManager/ITManager/Views/MyPersonalPageView.xaml
+++ b/ITManager/ITManager/Views/MyPersonalPageView.xaml
@@ -4,26 +4,141 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:c="clr-namespace:ITManager.Converters"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="4*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1">
-            <Label HorizontalAlignment="Center" Content="{Binding User.Name}">
-                <!--<Label.Content>
-                    <MultiBinding StringFormat="{}{0} + {1}}">
-                        <Binding Path="User.Name"/>
-                        <Binding Path="User.Surname"/>
-                    </MultiBinding>
-                </Label.Content>-->
-            </Label>
-            <!--<Label HorizontalAlignment="Center"
-                   Content="{Binding }"></Label>-->
-        </StackPanel>
-    </Grid>
+    <UserControl.Resources>
+        <c:DatesToDateRangeConverter x:Key="DatesToDateRangeConverter" />
+    </UserControl.Resources>
+    <ScrollViewer Margin="40 40 0 0" 
+                  HorizontalScrollBarVisibility="Auto" 
+                  VerticalScrollBarVisibility="Auto">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0">
+                <Label HorizontalAlignment="Center"
+                           Content="{Binding UserName}" 
+                           Style="{StaticResource DefaultLabelStyle}" FontWeight="SemiBold"/>
+                <Label HorizontalAlignment="Center"
+                       FontSize="16"
+                       Content="{Binding Position.Name}"/>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Margin="0 30 0 0">
+                <StackPanel Orientation="Horizontal">
+                    <Label  Content="Professional Summary"
+                            VerticalAlignment="Center"
+                            Style="{StaticResource SectionTitleStyle}" 
+                            Margin="0"/>
+                    <ToggleButton Content="✎"
+                                  IsEnabled="{Binding CanUserChangeData}"
+                                  Style="{StaticResource MetroCircleToggleButtonStyle}" Width="40" Height="40"/>
+                </StackPanel>
+                <TextBlock Text="{Binding ProfessionalSummary.ProfessionalSummary1}"/>
+            </StackPanel>
+            <StackPanel Grid.Row="2" Margin="0 20 0 0">
+                <StackPanel Orientation="Horizontal">
+                    <Label  Content="Skills"
+                            Margin="0"
+                            Style="{StaticResource SectionTitleStyle}"/>
+                    <ToggleButton Content="✎"
+                                  IsEnabled="{Binding CanUserChangeData}"
+                                  Style="{StaticResource MetroCircleToggleButtonStyle}" Width="40" Height="40"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Row="3" Margin="0 20 0 0">
+                <StackPanel Orientation="Horizontal">
+                    <Label  Content="Projects"
+                            Margin="0"
+                            Style="{StaticResource SectionTitleStyle}"/>
+                    <ToggleButton Content="✎"
+                                  Name="ProjectsEditToggleButton"
+                                  IsEnabled="{Binding CanUserChangeData}"
+                                  Style="{StaticResource MetroCircleToggleButtonStyle}" Width="40" Height="40"/>
+                </StackPanel>
+                <ListBox ItemsSource="{Binding Projects, UpdateSourceTrigger=PropertyChanged}" 
+                         IsEnabled="{Binding IsChecked, ElementName=ProjectsEditToggleButton, UpdateSourceTrigger=PropertyChanged}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Label Grid.Row="0" Grid.Column="0" Content="Project name: "/>
+                                <Label Grid.Row="0" Grid.Column="1" Content="{Binding Name}"/>
+
+                                <Label Grid.Row="1" Grid.Column="0" Content="Duration: "/>
+                                <Label Grid.Row="1" Grid.Column="1">
+                                    <Label.Content>
+                                        <MultiBinding Converter="{StaticResource DatesToDateRangeConverter}">
+                                            <Binding Path="StartDate"/>
+                                            <Binding Path="EndDate"/>
+                                        </MultiBinding>
+                                    </Label.Content>
+                                </Label>
+
+                                <Label Grid.Row="2" Grid.Column="0" Content="Description: "/>
+                                <Label Grid.Row="2" Grid.Column="1" Content="{Binding Description}"/>
+
+                                <Label Grid.Row="3" Grid.Column="0" Content="Position: "/>
+                                <Label Grid.Row="3" Grid.Column="1" Content="{Binding Name}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </StackPanel>
+            <StackPanel Grid.Row="4" Margin="0 20 0 0" >
+                <StackPanel Orientation="Horizontal">
+                    <Label  Content="Educations"
+                            Margin="0"
+                            Style="{StaticResource SectionTitleStyle}"/>
+                    <ToggleButton Content="✎"
+                                  IsEnabled="{Binding CanUserChangeData}"
+                                  Style="{StaticResource MetroCircleToggleButtonStyle}" Width="40" Height="40"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Row="5" Margin="0 20 0 0" >
+                <StackPanel Orientation="Horizontal">
+                    <Label  Content="Sertificates"
+                            Margin="0"
+                            Style="{StaticResource SectionTitleStyle}"/>
+                    <ToggleButton Content="✎"
+                                  IsEnabled="{Binding CanUserChangeData}"
+                                  Style="{StaticResource MetroCircleToggleButtonStyle}" Width="40" Height="40"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Row="6" Margin="0 20 0 0" >
+                <StackPanel Orientation="Horizontal">
+                    <Label  Content="Languages"
+                            Margin="0"
+                            Style="{StaticResource SectionTitleStyle}"/>
+                    <ToggleButton Content="✎"
+                                  IsEnabled="{Binding CanUserChangeData}"
+                                  Style="{StaticResource MetroCircleToggleButtonStyle}" Width="40" Height="40"/>
+                </StackPanel>
+            </StackPanel>
+            <Button Grid.Row="7"
+                    Margin="0 20 50 0"
+                    HorizontalAlignment="Right"
+                    Style="{StaticResource DefaultButtonStyle}"
+                    Width="200" 
+                    Content="Save user" />
+        </Grid>
+    </ScrollViewer>
 </UserControl>
